--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
         padding: 0;
         box-sizing: border-box;
       }
+
+      .hw2sec,
+      .hw4sec,
+      .hw5sec {
+        margin: 30px auto;
+        max-width: 600px;
+      }
+      li {
+        margin-bottom: 20px;
+      }
     </style>
+    <script defer src="./index.js"></script>
   </head>
   <body style="line-height: 1.2">
     <header style="margin: 2px auto; max-width: 400px; text-align: center">
@@ -43,5 +54,118 @@
       <p style="font-size: 12px">Mobile application developer</p>
       <p style="font-size: 12px">Desktop application developer</p>
     </header>
+    <hr style="margin: 20px" />
+    <section class="hw2sec">
+      <a href="https://ibb.co/7rCfYFz"
+        ><img
+          src="https://i.ibb.co/0Y27D3X/ecc006-hw2.png"
+          alt="ecc006-hw2"
+          border="0"
+      /></a>
+      <a
+        href="https://wordpress.com/post/217076040?url=https%3A%2F%2Ffirstblogwebsite8.wordpress.com%2F2023%2F03%2F24%2Fwebsites-i-find-intriguing%2F&title=Websites%20I%20find%20intriguing&text"
+        >https://wordpress.com/post/217076040?url=https%3A%2F%2Ffirstblogwebsite8.wordpress.com%2F2023%2F03%2F24%2Fwebsites-i-find-intriguing%2F&title=Websites%20I%20find%20intriguing&text</a
+      >
+    </section>
+    <hr style="margin: 20px" />
+    <section class="hw4sec">
+      <h3 style="text-align: center; margin-bottom: 10px">HW 4</h3>
+      <ol>
+        <li>
+          Which type of CSS is coded in the body of the web page as an attribute
+          of an HTML tag? <br />
+          <strong>Answer: B - inline</strong>
+        </li>
+        <li>
+          Which of the following is the CSS property used to set the background
+          color of a web page? <br />
+          <strong> Answer: B - background-color</strong>
+        </li>
+        <li>
+          Which of the following describe two components of CSS rules? <br />
+          <strong>Answer: B - properties and declarations</strong>
+        </li>
+        <li>
+          Which of the following associates a web page with an external style
+          sheet?
+          <br />
+          <strong>Answer: C - link rel="stylesheet" href="style.css"</strong>
+        </li>
+        <li>
+          Which of the following configures a background color of #00CED1 for a
+          web page using CSS?
+          <br />
+          <strong>Answer: A - body { background-color: #00CED1; }</strong>
+        </li>
+        <li>The style element doesn't have a closing tag /</li>
+      </ol>
+    </section>
+    <hr style="margin: 20px" />
+    <section class="hw5sec">
+      <h3 style="text-align: center; margin-bottom: 10px">HW 5</h3>
+      <ol>
+        <li>
+          Which of the following are the three most common methods for
+          organizing websites?
+          <br />
+          <strong>Answer: B - hierarchical, linear, and random</strong>
+        </li>
+        <li>
+          Which of the following are the four principles of the Web Content
+          Accessibility Guidelines?
+          <br />
+          <strong
+            >Answer: B - perceivable, operable, understandable, and
+            robust</strong
+          >
+        </li>
+        <li>
+          Which of the following are influenced by the intended or target
+          audience of a site?
+          <br />
+          <strong>Answer: D - all of the above</strong>
+        </li>
+        <li>
+          Which of the following recommended design practices apply to a website
+          that uses images for its main site navigation?
+          <br />
+          <strong>Answer: C - Both a and b</strong>
+        </li>
+        <li>
+          Which of the following is a color scheme that consists of two colors
+          that are opposite each other on the color wheel?
+          <br />
+          <strong>Answer: B - complementary</strong>
+        </li>
+        <li>
+          I chose Amazon.com (http://www.amazon.com) and Alibaba.com
+          (https://www.alibaba.com/)
+          <br />
+          <hr style="margin: 20px" />
+          <strong>Repetition:</strong>
+          Both sites have their logo placed on the top of the page representing
+          their brand and they also have a search bar to help users easily find
+          the product they want
+          <br />
+          <hr style="margin: 20px" />
+          <strong>Contrast:</strong>
+          Amazon has a sliding component in its header advertising seasonal
+          products eg ramadan season products and discounted products based on
+          the location and amazon also bring the page in turkish language based
+          on my IP. Alibaba has just non sliding component advert to help users
+          navigate and the page is in english even tho my IP is in turkey
+          <hr style="margin: 20px" />
+          <strong>Proximity:</strong>
+          Both Amazon and Alibaba nicely list their products in components with
+          each of the section showing different types of product. They also have
+          a really long nav that shows different sections of products
+          <hr style="margin: 20px" />
+          <strong>Alignment:</strong>
+          Both Amazon and Alibaba have grid template columns that nicely arrange
+          their products and the header is nicely arranged. And the footer is
+          nicely designed at the bottom of the page
+        </li>
+      </ol>
+    </section>
   </body>
 </html>
