--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
       .hw2sec,
       .hw4sec,
-      .hw5sec {
+      .hw5sec,
+      .hw6sec {
         margin: 30px auto;
         max-width: 600px;
       }
@@ -83,7 +84,7 @@
         </li>
         <li>
           Which of the following describe two components of CSS rules? <br />
-          <strong>Answer: B - properties and declarations</strong>
+          <strong>Answer: A - Selectors and declarations</strong>
         </li>
         <li>
           Which of the following associates a web page with an external style
@@ -164,6 +165,45 @@
           Both Amazon and Alibaba have grid template columns that nicely arrange
           their products and the header is nicely arranged. And the footer is
           nicely designed at the bottom of the page
+        </li>
+      </ol>
+    </section>
+    <hr style="margin: 20px" />
+    <section class="hw6sec">
+      <h3 style="text-align: center; margin-bottom: 10px">HW 6</h3>
+      <ol>
+        <li>
+          Which of the following, from outermost to innermost, are components of
+          the box model? <br />
+          <strong>Answer: A - margin, border, padding, content</strong>
+        </li>
+        <li>
+          Which of the following causes an element to display as a block of
+          content with white space above and below?
+          <br />
+          <strong> Answer: C - display: block</strong>
+        </li>
+        <li>
+          Which of the following pseudo-classes is the default state for a
+          hyperlink that has been clicked <br />
+          <strong>Answer: D - :visited</strong>
+        </li>
+        <li>
+          Which HTML5 element has the purpose of providing tangential content
+          <br />
+          <strong>Answer: B - aside</strong>
+        </li>
+        <li>
+          Which HTML5 element has the purpose of providing tangential content
+          <br />
+          <strong
+            >nav { float: right; width: 150px; background-color: #cccccc;
+            border: 1px solid #333333; } header { background-color: #cccccc;
+            color: #663333; font-size: x-large; border-bottom: 1px solid
+            #333333; } main { margin-right: 170px; } footer { font-size:
+            x-small; text-align: center; clear: both; } nav a { color: #000066;
+            text-decoration: none; } ul { list-style-type: none; }</strong
+          >
         </li>
       </ol>
     </section>
