--- a/index.html
+++ b/index.html
@@ -207,5 +207,38 @@
         </li>
       </ol>
     </section>
+    <hr style="margin: 20px" />
+    <section class="hw6sec">
+      <h3 style="text-align: center; margin-bottom: 10px">HW 7</h3>
+      <ol>
+        <li>
+          How would you link to the named fragment #jobs on the page employ.html
+          from the home page of the site? <br />
+          <strong
+            >Answer: A - &lt;a href="employ.html#jobs"&gt;Jobs&lt;/a&gt;
+          </strong>
+        </li>
+        <li>
+          Which pseudo-element can be used to generate content that precedes an
+          element?
+          <br />
+          <strong> Answer: B - :before </strong>
+        </li>
+        <li>
+          Which of the following is a mobile web design best practice? <br />
+          <strong>Answer: A - Configure a multiple-column page layout.</strong>
+        </li>
+        <li>
+          Find the Error. The page below is intended for the navigation area to
+          display on the right side of the browser window. What needs to be
+          changed to make this happen?
+          <br />
+          <strong
+            >Answer: Add to the nav css the following: nav{float: right; width:
+            25%;}
+          </strong>
+        </li>
+      </ol>
+    </section>
   </body>
 </html>
