--- a/index.html
+++ b/index.html
@@ -240,5 +240,13 @@
         </li>
       </ol>
     </section>
+    <hr style="margin: 20px" />
+
+    <section class="hw6sec">
+      <h3 style="text-align: center; margin-bottom: 10px">HW 8</h3>
+      <a href="movie8.html" style="text-align: center; display: block"
+        >Homework 8a</a
+      >
+    </section>
   </body>
 </html>
