--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
     <section class="hw6sec">
       <h3 style="text-align: center; margin-bottom: 10px">HW 8</h3>
-      <a href="movie8.html" style="text-align: center; display: block"
+      <a target="_blank" href="movie8.html" style="text-align: center; display: block"
         >Homework 8a</a
       >
     </section>
