--- a/index.html
+++ b/index.html
@@ -244,8 +244,20 @@
 
     <section class="hw6sec">
       <h3 style="text-align: center; margin-bottom: 10px">HW 8</h3>
-      <a target="_blank" href="movie8.html" style="text-align: center; display: block"
+      <a
+        href="movie8.html"
+        target="_blank"
+        style="text-align: center; display: block"
         >Homework 8a</a
+      >
+    </section>
+    <section class="hw6sec">
+      <h3 style="text-align: center; margin-bottom: 10px">HW 8</h3>
+      <a
+        href="form9.html"
+        target="_blank"
+        style="text-align: center; display: block"
+        >Homework 9</a
       >
     </section>
   </body>
