--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     </header>
     <hr style="margin: 20px" />
     <section class="hw2sec">
+      <h3 style="text-align: center; margin-bottom: 10px">HW 2</h3>
       <a href="https://ibb.co/7rCfYFz"
         ><img
           src="https://i.ibb.co/0Y27D3X/ecc006-hw2.png"
@@ -68,6 +69,14 @@
         >https://wordpress.com/post/217076040?url=https%3A%2F%2Ffirstblogwebsite8.wordpress.com%2F2023%2F03%2F24%2Fwebsites-i-find-intriguing%2F&title=Websites%20I%20find%20intriguing&text</a
       >
     </section>
+    <hr style="margin: 20px" />
+
+    <section class="hw4sec">
+      <h3 style="text-align: center; margin-bottom: 10px">HW 3</h3>
+      The page won't display correctly because of the mistake in the style
+      closing tag. It's supposed to be &lt;/style&gt;
+    </section>
+
     <hr style="margin: 20px" />
     <section class="hw4sec">
       <h3 style="text-align: center; margin-bottom: 10px">HW 4</h3>
@@ -98,7 +107,7 @@
           <br />
           <strong>Answer: A - body { background-color: #00CED1; }</strong>
         </li>
-        <li>The style element doesn't have a closing tag /</li>
+        <li>The &lt;/style&gt; element doesn't have a closing tag /</li>
       </ol>
     </section>
     <hr style="margin: 20px" />
