--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
         >Homework 8a</a
       >
     </section>
+   <hr style="margin: 20px" />
     <section class="hw6sec">
       <h3 style="text-align: center; margin-bottom: 10px">HW 8</h3>
       <a
