--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
       li {
         margin-bottom: 20px;
       }
+      .ulp {
+        margin-bottom: 20px;
+        /* text-align: center; */
+      }
+      .ull {
+        margin-bottom: 0;
+        margin-left: 10px;
+      }
+      .ulul {
+        margin-left: 10px;
+        margin-bottom: 20px;
+      }
     </style>
     <script defer src="./index.js"></script>
   </head>
@@ -260,14 +272,24 @@
         >Homework 8a</a
       >
     </section>
-   <hr style="margin: 20px" />
+    <hr style="margin: 20px" />
     <section class="hw6sec">
-      <h3 style="text-align: center; margin-bottom: 10px">HW 8</h3>
+      <h3 style="text-align: center; margin-bottom: 10px">HW 9</h3>
       <a
         href="form9.html"
         target="_blank"
         style="text-align: center; display: block"
         >Homework 9</a
+      >
+    </section>
+    <hr style="margin: 20px" />
+    <section class="hw6sec">
+      <h3 style="text-align: center; margin-bottom: 10px">HW 10</h3>
+      <a
+        href="survey.html"
+        target="_blank"
+        style="text-align: center; display: block"
+        >Homework 10</a
       >
     </section>
   </body>
